tidying up navbar and add javascript to ensure the navbar close on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,9 @@
 }
 
 /* Global styles*/
-html body {
+body {
     font-family: var(--primary-font);
-    padding-top: 58px; /* push the top of the header down under fixed navbar */;
+    padding-top: 60px; /* push the top of the header down under fixed navbar */
 }
 
 h1,
@@ -43,8 +43,7 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: 4rem;
 }
 
 /* Button */
